compiler/tests/fail/import_missing.afns
package import_missing_case;

import does.not.exist;

fn main() -> i32 {
    return 0;
}
